# gala-server

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md  TODO.md  TRANSPILER_NOTES.md  extractor.gala  extractor_test.gala  filter.gala  filter_test.gala  gala.mod  gala.sum  gala_test_harness_test.go  gala_test_wrappers_test.go  go.mod  group.gala  integration_test.gala  metrics.gala  metrics_test.gala  middleware.gala  readme_test.gala  request.gala  response.gala  router.gala  server.gala  server_test.gala  server_test.gen.go  session.gala  session_test.gala  sse.gala  sse_test.gala  types.gala
.github/workflows/: ci.yml
benchmark/: README.md  benchmark_test.go  go.mod  go.sum
docs/: api-reference.md  filters.md  getting-started.md  groups.md
examples/dashboard/: BUILD.bazel  main.gala
examples/hello/: BUILD.bazel  README.md  main.gala
examples/loadgen/: BUILD.bazel  main.go
httpcore/: BUILD.bazel  httpcore.go  testing.go
tui/: BUILD.bazel  bus.go  dashboard.gala  dashboard.go
