load("@gala//:gala.bzl", "gala_go_test", "gala_transpile")
load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library")

exports_files(
    ["go.mod"],
    visibility = ["//visibility:public"],
)

# gazelle:prefix martianoff/gala-server
gazelle(
    name = "gazelle",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# --- GALA Server Library ---

_GALA_SRCS = [
    "types.gala",
    "request.gala",
    "response.gala",
    "group.gala",
    "server.gala",
    "router.gala",
    "filter.gala",
]

filegroup(
    name = "gala_sources",
    srcs = glob(
        ["*.gala"],
        exclude = ["*_test.gala"],
    ),
    visibility = ["//visibility:public"],
)

# Convention name for gala_deps resolution
filegroup(
    name = "gala-server_gala_sources",
    srcs = [":gala_sources"],
    visibility = ["//visibility:public"],
)

# Transpile each GALA file with package_files for cross-file type resolution
[gala_transpile(
    name = src.replace(".gala", "_go"),
    src = src,
    out = src.replace(".gala", ".gen.go"),
    package_files = [s for s in _GALA_SRCS if s != src],
) for src in _GALA_SRCS]

# Go library from transpiled GALA sources
go_library(
    name = "gala-server",
    srcs = [src.replace(".gala", ".gen.go") for src in _GALA_SRCS],
    importpath = "github.com/martianoff/gala-server",
    visibility = ["//visibility:public"],
    deps = [
        "//httpcore",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//json",
        "@gala//std",
    ],
)

_TEST_DEPS = [
    "//httpcore",
    "@gala//collection_immutable",
    "@gala//concurrent",
    "@gala//json",
]

gala_go_test(
    name = "server_test",
    srcs = ["server_test.gala"],
    pkg = "server",
    lib_srcs = _GALA_SRCS,
    deps = _TEST_DEPS,
)

gala_go_test(
    name = "filter_test",
    srcs = ["filter_test.gala"],
    pkg = "server",
    lib_srcs = _GALA_SRCS,
    deps = _TEST_DEPS,
)

gala_go_test(
    name = "integration_test",
    srcs = ["integration_test.gala"],
    pkg = "server",
    lib_srcs = _GALA_SRCS,
    deps = _TEST_DEPS,
)
