load("@gala//:gala.bzl", "gala_go_test", "gala_library")
load("@gazelle//:def.bzl", "gazelle")

exports_files(
    ["go.mod"],
    visibility = ["//visibility:public"],
)

# gazelle:prefix martianoff/gala-server
gazelle(
    name = "gazelle",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# --- GALA Server Library ---

_GALA_SRCS = glob(
    ["*.gala"],
    exclude = ["*_test.gala"],
)

gala_library(
    name = "gala-server",
    srcs = _GALA_SRCS,
    importpath = "github.com/martianoff/gala-server",
    deps = [
        "//httpcore",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//json",
    ],
    visibility = ["//visibility:public"],
)

# --- Tests ---

_TEST_DEPS = [
    "//httpcore",
    "@gala//collection_immutable",
    "@gala//concurrent",
    "@gala//json",
]

gala_go_test(
    name = "server_test",
    srcs = ["server_test.gala"],
    pkg = "server",
    lib_srcs = _GALA_SRCS,
    deps = _TEST_DEPS,
)

gala_go_test(
    name = "filter_test",
    srcs = ["filter_test.gala"],
    pkg = "server",
    lib_srcs = _GALA_SRCS,
    deps = _TEST_DEPS,
)

gala_go_test(
    name = "integration_test",
    srcs = ["integration_test.gala"],
    pkg = "server",
    lib_srcs = _GALA_SRCS,
    deps = _TEST_DEPS,
)

gala_go_test(
    name = "extractor_test",
    srcs = ["extractor_test.gala"],
    pkg = "server",
    lib_srcs = _GALA_SRCS,
    deps = _TEST_DEPS,
)

gala_go_test(
    name = "sse_test",
    srcs = ["sse_test.gala"],
    pkg = "server",
    lib_srcs = _GALA_SRCS,
    deps = _TEST_DEPS,
)
