load("@gala_gazelle//gala:defs.bzl", "gala_gazelle")
load("@gazelle//:def.bzl", "gazelle")
load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

exports_files(
    ["go.mod"],
    visibility = ["//visibility:public"],
)

# Composite gazelle (one @gala_gazelle//gala language managing GALA, mixed
# GALA/Go, and pure-Go), with the import helper driven from the registered GALA
# toolchain. gala-server is a leaf app (nothing depends on it), so the
# gala_gazelle() macro — which loads the dev-only @gala_gazelle — is safe here.
# gazelle:prefix github.com/martianoff/gala-server
# gazelle:gala_prefix github.com/martianoff/gala-server
# gala-tui ships its gala_library in another Bazel module; map its import path
# to that label so it lands in gala_deps.
# gazelle:resolve gala github.com/martianoff/gala-tui @gala_tui//:gala_tui
# benchmark/ is an auxiliary perf-comparison harness against echo/gin — Go deps
# that aren't in go.mod, so it has never been part of the bazel build. Skip it.
# gazelle:exclude benchmark
gala_gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

gala_library(
    name = "gala_server",
    srcs = [
        "extractor.gala",
        "filter.gala",
        "group.gala",
        "metrics.gala",
        "request.gala",
        "response.gala",
        "router.gala",
        "server.gala",
        "session.gala",
        "sse.gala",
        "types.gala",
    ],
    importpath = "github.com/martianoff/gala-server",
    visibility = ["//visibility:public"],
    deps = [
        "//httpcore",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//json",
    ],
)

gala_test(
    name = "gala_server_test",
    srcs = [
        "extractor_test.gala",
        "filter_test.gala",
        "integration_test.gala",
        "metrics_test.gala",
        "readme_test.gala",
        "server_test.gala",
        "session_test.gala",
        "sse_test.gala",
    ],
    importpath = "github.com/martianoff/gala-server",
    lib_srcs = [
        "extractor.gala",
        "filter.gala",
        "group.gala",
        "metrics.gala",
        "request.gala",
        "response.gala",
        "router.gala",
        "server.gala",
        "session.gala",
        "sse.gala",
        "types.gala",
    ],
    pkg = "server",
    deps = [
        "//httpcore",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//json",
    ],
)
