load("@gala//:gala.bzl", "gala_library")

gala_library(
    name = "tui",
    srcs = ["dashboard.gala"],
    importpath = "github.com/martianoff/gala-server/tui",
    gala_deps = [
        "//:gala-server",
        "@gala_tui//:gala_tui",
    ],
    deps = [
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//time_utils",
    ],
    visibility = ["//visibility:public"],
)
