load("@rules_gala//gala:defs.bzl", "gala_library")

gala_library(
    name = "tui",
    srcs = ["dashboard.gala"],
    gala_deps = ["@gala_tui//:gala_tui"],
    importpath = "github.com/martianoff/gala-server/tui",
    visibility = ["//visibility:public"],
    deps = [
        "//:gala_server",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//time_utils",
    ],
)
