load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "loadgen",
    embed = [":loadgen_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "loadgen_lib",
    srcs = ["main.go"],
    importpath = "github.com/martianoff/gala-server/examples/loadgen",
    visibility = ["//visibility:private"],
)
